[GTK] ASSERTION_FAILED: m_key != PTHREAD_KEYS_MAX when defining WEBKIT2_PAUSE_WEB_PROCESS_ON_LAUNCH https://bugs.webkit.org/show_bug.cgi?id=158149

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2016-07-04
Reviewed by Carlos Garcia Campos.

WTF::sleep can not be used at the beginning of web process because
WTF is not initialized at the moment yet.

* WebProcess/gtk/WebProcessMainGtk.cpp: Use g_usleep instead of WTF::sleep.

Canonical link: https://commits.webkit.org/177532@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202801 268f45cc-cd09-0410-ab3c-d52691b4dbfc